@@ -29,6 +29,7 @@ class InnoworkTicket extends InnoworkItem
         $this->mKeys['priorityid'] = 'table:innowork_tickets_fields_values:fieldvalue:integer';
         $this->mKeys['sourceid'] = 'table:innowork_tickets_fields_values:fieldvalue:integer';
         $this->mKeys['channelid'] = 'table:innowork_tickets_fields_values:fieldvalue:integer';
+        $this->mKeys['typeid'] = 'table:innowork_tickets_fields_values:fieldvalue:integer';
         $this->mKeys['creationdate'] = 'timestamp';
         $this->mKeys['done'] = 'boolean';
         $this->mKeys['openedby'] = 'integer';
@@ -37,6 +38,7 @@ class InnoworkTicket extends InnoworkItem
         $this->mSearchResultKeys[] = 'title';
         $this->mSearchResultKeys[] = 'projectid';
         $this->mSearchResultKeys[] = 'customerid';
+        $this->mSearchResultKeys[] = 'typeid';
         $this->mSearchResultKeys[] = 'statusid';
         $this->mSearchResultKeys[] = 'priorityid';
         $this->mSearchResultKeys[] = 'sourceid';
@@ -50,6 +52,7 @@ class InnoworkTicket extends InnoworkItem
         $this->mViewableSearchResultKeys[] = 'title';
         $this->mViewableSearchResultKeys[] = 'projectid';
         $this->mViewableSearchResultKeys[] = 'customerid';
+        $this->mViewableSearchResultKeys[] = 'typeid';
         $this->mViewableSearchResultKeys[] = 'statusid';
         $this->mViewableSearchResultKeys[] = 'priorityid';
         $this->mViewableSearchResultKeys[] = 'sourceid';
@@ -109,6 +112,10 @@ class InnoworkTicket extends InnoworkItem
                 or !strlen( $params['channelid'] )
                 ) $params['channelid'] = '0';
 
+            if (!isset($params['typeid']) or !strlen($params['typeid'])) {
+            	$params['typeid'] = '0';
+            }
+            
             if (!isset($params['openedby']) or !strlen($params['openedby'])) {
             	$params['openedby'] = '0';
             }
@@ -160,6 +167,7 @@ class InnoworkTicket extends InnoworkItem
                 case 'priorityid':
                 case 'sourceid':
                 case 'channelid':
+                case 'typeid':
                 case 'openedby':
                 case 'assignedto':
                     if ( !strlen( $key ) ) $key = 0;
@@ -233,6 +241,7 @@ class InnoworkTicket extends InnoworkItem
                         case 'priorityid':
                         case 'sourceid':
                         case 'channelid':
+                        case 'typeid':
                 		case 'openedby':
                 		case 'assignedto':
                         	if ( !strlen( $value ) ) $value = 0;
