@@ -17,6 +17,7 @@ priority.header                 = Priority
 status.header                   = Status
 source.header                     = Source
 channel.header					= Channel
+type.header                     = Type
 openedby.header                 = Opened by
 assignedto.header               = Assigned to
 showticket.button               = Open
@@ -34,12 +35,14 @@ filter_priority.label           = Priority
 filter_status.label             = Status
 filter_source.label             = Source
 filter_channel.label			= Channel
+filter_type.label               = Type
 allcustomers.label				= All
 allprojects.label				= All
 allstatuses.label				= All
 allpriorities.label				= All
 allsources.label				= All
 allchannels.label				= All
+alltypes.label                  = All
 filter_allusers.label           = Anyone
 spenttime.label					= Spent time
 total_spent_time.label			= Total spent time
@@ -56,6 +59,7 @@ nostatus.label                  = No status
 nopriority.label                = No priority
 nosource.label                    = No source
 nochannel.label					= No channel
+notype.label                    = No type
 showticket.header               = Ticket %s
 update_ticket.button            = Save
 archive_ticket.button             = Save and archive
@@ -66,6 +70,7 @@ status.label                    = Status
 priority.label                  = Priority
 source.label                      = Source
 channel.label					= Channel
+type.label                      = Type
 title.label                     = Title
 description.label               = Description
 solution.label                  = Solution
