@@ -17,6 +17,7 @@ priority.header                 = Priorità
 status.header                   = Stato
 source.header                     = Provenienza
 channel.header					= Canale
+type.header                     = Tipo
 openedby.header                 = Aperto da
 assignedto.header               = Assegnato a
 showticket.button               = Apri
@@ -34,12 +35,14 @@ filter_priority.label           = Priorità
 filter_status.label             = Stato
 filter_source.label             = Provenienza
 filter_channel.label			= Canale
+filter_type.label               = Tipo
 allcustomers.label				= Tutte
 allprojects.label				= Tutti
 allstatuses.label				= Tutti
 allpriorities.label				= Tutte
 allsources.label				= Tutte
 allchannels.label				= Tutti
+alltypes.label                  = Tutti
 filter_allusers.label           = Chiunque
 spenttime.label					= Tempo impiegato
 total_spent_time.label			= Totale tempo impiegato
@@ -57,6 +60,7 @@ nostatus.label                  = Nessuno stato
 nopriority.label                = Nessuna priorità
 nosource.label                    = Nessuna provenienza
 nochannel.label					= Nessun canale
+notype.label                    = Nessun tipo
 showticket.header               = Ticket %s
 update_ticket.button            = Salva
 archive_ticket.button             = Salva e archivia
@@ -67,6 +71,7 @@ status.label                    = Stato
 priority.label                  = Priorità
 source.label                      = Provenienza
 channel.label					= Canale
+type.label                      = Tipo
 title.label                     = Titolo
 description.label               = Descrizione
 solution.label                  = Soluzione
